forecast/sfdc/src/objects/SpecialistForecastLineItem__c.object
<CustomObject>
    <label>Specialist Forecast Line Item</label>
    <pluralLabel>Specialist Forecast Line Items</pluralLabel>
    <description>Specialist Forecast Line Items within 62 Org</description>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>ExcludeFromCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Calculation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>External Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FYMonth__c</fullName>
        <inlineHelpText>The month in number for the year starting from 1</inlineHelpText>
        <label>FY Month #</label>
        <picklist>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <inlineHelpText>Returns the FY of the record</inlineHelpText>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY16</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ForecastNotes__c</fullName>
        <label>Forecast Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ForecastOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SpecialistForecastLineItemToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MyBestcaseOverriden__c</fullName>
        <label>My Bestcase Overriden?</label>
	<defaultValue>true</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyCommitOverriden__c</fullName>
        <label>My Commit Overriden?</label>
	<defaultValue>true</defaultValue>
	<type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalBestCaseAmount__c</fullName>
        <description>Specialist AE&apos;s forecasted opportunity best case amount for their cloud-specific products</description>
        <label>Original Best Case Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalClosedAmount__c</fullName>
        <description>Specialist AE&apos;s forecasted opportunity closed amount for their cloud-specific products</description>
        <label>Original Closed Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalCommitAmount__c</fullName>
        <description>Specialist AE&apos;s forecasted opportunity commit amount for their cloud-specific products</description>
        <label>Original Commit Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalPipelineAmount__c</fullName>
        <description>Specialist AE&apos;s forecasted opportunity pipeline amount for their cloud-specific products</description>
        <label>Original Pipeline Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    
    <fields>
        <fullName>SpecialistForecastOverride__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialist Forecast Override</label>
        <referenceTo>SpecialistForecastOverride__c</referenceTo>
        <relationshipName>SpecialistForecastLineItemToOverride</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>

    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ForecastOwner__c</columns>
        <columns>OriginalClosedAmount__c</columns>
        <columns>OriginalCommitAmount__c</columns>
        <columns>OriginalBestCaseAmount__c</columns>
        <columns>OriginalPipelineAmount__c</columns>
        <columns>ExcludeFromCalculation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SFL-{00000000}</displayFormat>
        <label>Specialist Forecast Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>SpecialistForecastLineItemData</fullName>
        <active>true</active>
        <description>Record Type assigned for Specialist Forecast Line Item</description>
        <label>Specialist Forecast Line Item Data</label>
    </recordTypes>
    
</CustomObject>